--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2017.7.27.1
 chardet==3.0.4
 dj-database-url==0.4.2
+dj-static==0.0.6
 Django==1.8.15
 django-background-tasks==1.1.13
 django-compat==1.0.15
@@ -11,5 +12,6 @@ psycopg2==2.6.2
 requests==2.18.4
 simplejson==3.13.2
 six==1.11.0
+static3==0.7.0
 urllib3==1.22
 whitenoise==3.2.3
