--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ gunicorn==19.6.0
 idna==2.6
 igdb-api-python==1.0
 psycopg2==2.7.4
+psycopg2-binary==2.7.4
 requests==2.18.4
 simplejson==3.13.2
 six==1.11.0
